PyMaker/datas/object2/RawHTML/i5001/Python_DOC_referPages.cant-import-third-party-libraries-python3.txt
<div class="post-text" itemprop="text">
<p>I downloaded requests and BeautifulSoup modules using pip and when i try to import using command line it works. But when I code in notepad++ and then run the .py file using cmd it gives an error. </p>
<p><strong>This is my code:</strong></p>
<pre><code>import requests
from bs4 import BeautifulSoup
response=requests.get('')
html=response.text
soup=BeautifulSoup(html,'html.parser')
soup.p.a.string
</code></pre>
<p><strong>The error I am getting is:</strong></p>
<pre><code>Traceback (most recent call last):
  File "soup.py", line 1, in &lt;module&gt;
    import requests
  File "C:\Users\person8565\AppData\Local\Programs\Python\Python36\lib\site-packages\requests\__init__.py", line 43, in &lt;module&gt; 
    import urllib3
  File "C:\Users\person8565\AppData\Local\Programs\Python\Python36\lib\site-packages\urllib3\__init__.py", line 8, in &lt;module&gt;
    from .connectionpool import (
  File "C:\Users\person8565\AppData\Local\Programs\Python\Python36\lib\site-packages\urllib3\connectionpool.py", line 3, in &lt;module&gt;
    import logging
  File "C:\Users\person8565\AppData\Local\Programs\Python\Python36\lib\logging\__init__.py", line 28, in &lt;module&gt;
    from string import Template
  File "C:\Users\person8565\Documents\python\string.py", line 13

     ^
SyntaxError: unexpected EOF while parsing
</code></pre>
<p><strong>Can anyone tell me what I am doing wrong?</strong></p>
</div>
<div class="post-text" itemprop="text">
<p>Quite simply you have named your file <code>string.py</code>.  <code>string</code> is a <a href="https://docs.python.org/3/library/string.html" rel="nofollow noreferrer">module</a> that is included in the default library.  There is nothing wrong with any of the modules you imported only that you importing your own script and not the module it actually needs. </p>
<p>Rename <code>string.py</code> to anything that is not a name that is not a module in the default library and it will work. </p>
</div>
<span class="comment-copy">Thanks Simon. I deleted string.py from my folder and named my file soup.py and it worked!!!!</span>
<span class="comment-copy">@UsamaAhmed  Yes it's an easy mistake to make.Never name you script the same as the package you want to use, or it will get the wrong thing.  Unless you want to override that package.</span>
